<resources>
    <string name="app_name">茗品雅汇</string>
    <string name="title_home">首页</string>
    <string name="title_lotto">抽奖</string>
    <string name="title_mine">我的</string>
    <string name="title_rule">规则</string>
    <string name="title_store">商城</string>
    <string name="setting_recharge">充值</string>
    <string name="setting_cash">提现</string>
    <string name="setting_gold_coin">金币专区</string>
    <string name="setting_orders">升级产品订单</string>
    <string name="setting_alert_pwd">修改密码</string>
    <string name="setting_voucher">我的代金券</string>
    <string name="setting_upgrade_orders">历史升级订单</string>
    <!--注册-->
    <string name="register">注册</string>
    <string name="register_get_security_code">获取验证码</string>
    <string name="register_input_security_code">请输入验证码</string>
    <string name="register_input_phone_num">请输入手机号</string>
    <string name="register_input_password">请输入密码</string>
    <string name="register_confirm_password">请确认密码</string>
    <string name="register_already_registered">已有账号，直接登录</string>
    <string name="register_input_recommend_code">请输入推荐码</string>
    <!--登录-->
    <string name="login">登录</string>
    <string name="login_remember_pwd">记住密码</string>
    <string name="login_lost_pwd">忘记密码</string>
    <!--Main-->
    <string name="wx_login">微信登录</string>
    <string name="upgrade_text">升级换礼</string>
    <!--商品详情-->
    <string name="goods_details">商品详情</string>
    <!--充值-->
    <string name="top_up">充值</string>
    <!--活动抽奖-->
    <string name="lottery">活动抽奖</string>
    <!--规则-->

    <string name="setting">设置</string>

    <string name="resume">继续</string>

    <string name="cancel">取消</string>

    <string name="ok">同意</string>

    <string name="no">拒绝</string>

    <string name="successfully">权限获取成功</string>

    <string name="failure">权限获取失败</string>

    <string name="title_dialog">提示</string>

    <string name="message_permission_rationale">授予下列权限以继续该程序:\n\n%1$s</string>

    <string name="message_permission_always_failed">需要以下权限, 请允许以下权限:\n\n%1$s</string>

</resources>
