<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include
        android:id="@+id/find_pass_toolbar"
        layout="@layout/layout_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/find_pass_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/find_pass_toolbar" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/find_pass_phone_num_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/find_pass_toolbar">

        <AutoCompleteTextView
            android:id="@+id/find_pass_phone_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_input_phone_num"
            android:imeOptions="actionNext"
            android:inputType="text|phone"
            android:maxLines="1"
            android:nextFocusForward="@+id/find_pass_security_code_input" />

    </android.support.design.widget.TextInputLayout>

    <com.sp.shangpin.widget.SecurityCodeView
        android:id="@+id/find_pass_security_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        style="@style/color_gray_btn"
        app:layout_constraintRight_toRightOf="@+id/find_pass_phone_num_layout"
        app:layout_constraintTop_toBottomOf="@+id/find_pass_toolbar" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/find_pass_security_code_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/find_pass_phone_num_layout">

        <AutoCompleteTextView
            android:id="@+id/find_pass_security_code_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_input_security_code"
            android:imeOptions="actionUnspecified"
            android:inputType="text|number"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/find_pass_password_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/find_pass_security_code_layout">

        <AutoCompleteTextView
            android:id="@+id/find_pass_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_input_password"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/find_pass_confirm_password_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/find_pass_password_layout">

        <AutoCompleteTextView
            android:id="@+id/find_pass_confirm_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_confirm_password"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/find_pass_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="提交"
        style="@style/color_primary_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/find_pass_confirm_password_layout" />


</android.support.constraint.ConstraintLayout>